--- a/File.Manager/File.Manager.Resources/Modules/Filesystem/Local/Strings.resx
+++ b/File.Manager/File.Manager.Resources/Modules/Filesystem/Local/Strings.resx
@@ -120,4 +120,13 @@
   <data name="DisplayName" xml:space="preserve">
     <value>Computer</value>
   </data>
+  <data name="Error_FailedToNavigateToAddress" xml:space="preserve">
+    <value>Failed to navigate to address {0}: {1}</value>
+  </data>
+  <data name="Error_FailedToObtainDriveList" xml:space="preserve">
+    <value>Failed to obtain local drive list: {0}</value>
+  </data>
+  <data name="Error_PathDoesNotExist" xml:space="preserve">
+    <value>Path {0} does not exist!</value>
+  </data>
 </root>
