--- a/File.Manager/File.Manager.Resources/Modules/Filesystem/Local/Strings.resx
+++ b/File.Manager/File.Manager.Resources/Modules/Filesystem/Local/Strings.resx
@@ -120,6 +120,9 @@
   <data name="DisplayName" xml:space="preserve">
     <value>Computer</value>
   </data>
+  <data name="Error_CannotOpenFile" xml:space="preserve">
+    <value>Cannot open file {0}: {1}</value>
+  </data>
   <data name="Error_FailedToNavigateToAddress" xml:space="preserve">
     <value>Failed to navigate to address {0}: {1}</value>
   </data>
