--- a/File.Manager/File.Manager.Resources/Controls/Pane/Strings.resx
+++ b/File.Manager/File.Manager.Resources/Controls/Pane/Strings.resx
@@ -117,6 +117,18 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Column_Header_Attributes" xml:space="preserve">
+    <value>Attributes</value>
+  </data>
+  <data name="Column_Header_Modified" xml:space="preserve">
+    <value>Modified date</value>
+  </data>
+  <data name="Column_Header_Name" xml:space="preserve">
+    <value>Filename</value>
+  </data>
+  <data name="Column_Header_Size" xml:space="preserve">
+    <value>Size</value>
+  </data>
   <data name="Message_AddressNavigationFailed" xml:space="preserve">
     <value>Falied to navigate to address: {0}</value>
   </data>
