--- a/File.Manager/File.Manager.Resources/Windows/MainWindow/Strings.resx
+++ b/File.Manager/File.Manager.Resources/Windows/MainWindow/Strings.resx
@@ -117,28 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="DisplayName" xml:space="preserve">
-    <value>Computer</value>
-  </data>
-  <data name="Error_CannotOpenFile" xml:space="preserve">
-    <value>Cannot open file {0}: {1}</value>
-  </data>
-  <data name="Error_FailedToNavigateToAddress" xml:space="preserve">
-    <value>Failed to navigate to address {0}: {1}</value>
-  </data>
-  <data name="Error_FailedToObtainDriveList" xml:space="preserve">
-    <value>Failed to obtain local drive list: {0}</value>
-  </data>
-  <data name="Error_PathDoesNotExist" xml:space="preserve">
-    <value>Path {0} does not exist!</value>
-  </data>
-  <data name="SizeDisplay_Directory" xml:space="preserve">
-    <value>[SUB-DIR]</value>
-  </data>
-  <data name="SizeDisplay_Drive" xml:space="preserve">
-    <value>[DRIVE]</value>
-  </data>
-  <data name="SizeDisplay_UpDirectory" xml:space="preserve">
-    <value>[UP-DIR]</value>
+  <data name="Window_Title" xml:space="preserve">
+    <value>File.Manager</value>
   </data>
 </root>
