--- a/File.Manager/File.Manager.Resources/Modules/Filesystem/Common/Strings.resx
+++ b/File.Manager/File.Manager.Resources/Modules/Filesystem/Common/Strings.resx
@@ -117,13 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Message_AddressNavigationFailed" xml:space="preserve">
-    <value>Falied to navigate to address {0}: {1}</value>
+  <data name="Header_Attributes" xml:space="preserve">
+    <value>Attributes</value>
   </data>
-  <data name="Message_AddressUnsupported" xml:space="preserve">
-    <value>The following address is unsupported: {0}</value>
+  <data name="Header_Filename" xml:space="preserve">
+    <value>Filename</value>
   </data>
-  <data name="Message_CannotExecuteItem" xml:space="preserve">
-    <value>Cannot execute action on item {0}: {1}</value>
+  <data name="Header_Modified" xml:space="preserve">
+    <value>Date modified</value>
+  </data>
+  <data name="Header_Size" xml:space="preserve">
+    <value>Size</value>
   </data>
 </root>
