--- a/File.Manager/File.Manager.Resources/Enums/Strings.resx
+++ b/File.Manager/File.Manager.Resources/Enums/Strings.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="OverwritingOptions_Abort" xml:space="preserve">
+    <value>Abort</value>
+  </data>
   <data name="OverwritingOptions_Ask" xml:space="preserve">
     <value>Ask for decision</value>
   </data>
