--- a/File.Manager/File.Manager.Resources/Operations/Strings.resx
+++ b/File.Manager/File.Manager.Resources/Operations/Strings.resx
@@ -123,6 +123,12 @@
   <data name="CopyMove_Critical_CannotExitSourceFolder" xml:space="preserve">
     <value>Failed to return to parent folder from location {0}.</value>
   </data>
+  <data name="CopyMove_Info_TotalDescription" xml:space="preserve">
+    <value>Copied files: {0} / {1} ({2}B / {3}B)</value>
+  </data>
+  <data name="CopyMove_Question_CannotGetFileAttributes" xml:space="preserve">
+    <value>Cannot get attributes of file {2} in location {1}.</value>
+  </data>
   <data name="CopyMove_Question_CannotOpenDestinationFile" xml:space="preserve">
     <value>Cannot open destination file {2} in location {0}.</value>
   </data>
