--- a/File.Manager/File.Manager.Resources/Operations/Strings.resx
+++ b/File.Manager/File.Manager.Resources/Operations/Strings.resx
@@ -124,7 +124,7 @@
     <value>Failed to return to parent folder from location {0}.</value>
   </data>
   <data name="CopyMove_Info_TotalDescription" xml:space="preserve">
-    <value>Copied files: {0} / {1} ({2}B / {3}B)</value>
+    <value>Copied files: {0} / {1} ({2} / {3})</value>
   </data>
   <data name="CopyMove_Question_CannotGetFileAttributes" xml:space="preserve">
     <value>Cannot get attributes of file {2} in location {1}.</value>
@@ -164,5 +164,11 @@
   </data>
   <data name="CopyMove_Question_SourceFileDoesNotExist" xml:space="preserve">
     <value>Source file {2} does not exist in location {0}.</value>
+  </data>
+  <data name="CopyMove_Title_CopyingFiles" xml:space="preserve">
+    <value>Copying files</value>
+  </data>
+  <data name="CopyMove_Title_MovingFiles" xml:space="preserve">
+    <value>Moving files</value>
   </data>
 </root>
