--- a/File.Manager/File.Manager.Resources/Windows/CopyMoveProgressWindow/Strings.resx
+++ b/File.Manager/File.Manager.Resources/Windows/CopyMoveProgressWindow/Strings.resx
@@ -117,64 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="CopyMove_Critical_CannotExitDestinationFolder" xml:space="preserve">
-    <value>Failed to return to parent folder from location {0}.</value>
+  <data name="Label_From" xml:space="preserve">
+    <value>From</value>
   </data>
-  <data name="CopyMove_Critical_CannotExitSourceFolder" xml:space="preserve">
-    <value>Failed to return to parent folder from location {0}.</value>
+  <data name="Label_Operation" xml:space="preserve">
+    <value>Operation</value>
   </data>
-  <data name="CopyMove_Info_TotalDescription" xml:space="preserve">
-    <value>Copied files: {0} / {1} ({2} / {3}). Elapsed: {4}, left: {5}{6}</value>
-  </data>
-  <data name="CopyMove_Question_CannotGetSourceFileAttributes" xml:space="preserve">
-    <value>Cannot get attributes of file {2} in location {0}.</value>
-  </data>
-  <data name="CopyMove_Question_CannotGetTargetFileAttributes" xml:space="preserve">
-    <value>Cannot get attributes of file {2} in location {1}.</value>
-  </data>
-  <data name="CopyMove_Question_CannotOpenDestinationFile" xml:space="preserve">
-    <value>Cannot open destination file {2} in location {0}.</value>
-  </data>
-  <data name="CopyMove_Question_CannotOpenSourceFile" xml:space="preserve">
-    <value>Cannot open source file {2} in location {0}.</value>
-  </data>
-  <data name="CopyMove_Question_CannotSetTargetFileAttributes" xml:space="preserve">
-    <value>Cannot set attributes of file {2} in location {1}.</value>
-  </data>
-  <data name="CopyMove_Question_DestinationFileAlreadyExists" xml:space="preserve">
-    <value>Destination file {2} already exists in location {1}.</value>
-  </data>
-  <data name="CopyMove_Question_DestinationFileIsReadOnly" xml:space="preserve">
-    <value>Destination file {2} is read only.</value>
-  </data>
-  <data name="CopyMove_Question_DestinationFileIsSystem" xml:space="preserve">
-    <value>Destination file {2} is a system file.</value>
-  </data>
-  <data name="CopyMove_Question_FailedToChangeFileAttributes" xml:space="preserve">
-    <value>Failed to change attributes of the destination file {2}.</value>
-  </data>
-  <data name="CopyMove_Question_FailedToCopyFile" xml:space="preserve">
-    <value>Failed to copy file {0} from {1} to {2}.</value>
-  </data>
-  <data name="CopyMove_Question_FailedToCreateDestinationFolder" xml:space="preserve">
-    <value>Failed to create folder {2} in location {1}.</value>
-  </data>
-  <data name="CopyMove_Question_FailedToEnterDestinationFolder" xml:space="preserve">
-    <value>Failed to open folder {2} in location {1}.</value>
-  </data>
-  <data name="CopyMove_Question_FailedToEnterSourceFolder" xml:space="preserve">
-    <value>Failed to open folde {2} in location {0}.</value>
-  </data>
-  <data name="CopyMove_Question_FailedToRemoveSourceFile" xml:space="preserve">
-    <value>Failed to delete source file {0} from location {1}.</value>
-  </data>
-  <data name="CopyMove_Question_SourceFileDoesNotExist" xml:space="preserve">
-    <value>Source file {2} does not exist in location {0}.</value>
-  </data>
-  <data name="CopyMove_Title_CopyingFiles" xml:space="preserve">
-    <value>Copying files</value>
-  </data>
-  <data name="CopyMove_Title_MovingFiles" xml:space="preserve">
-    <value>Moving files</value>
+  <data name="Label_To" xml:space="preserve">
+    <value>To</value>
   </data>
 </root>
