--- a/File.Manager/File.Manager.Resources/Operations/Strings.resx
+++ b/File.Manager/File.Manager.Resources/Operations/Strings.resx
@@ -123,6 +123,9 @@
   <data name="CopyMove_Critical_CannotExitSourceFolder" xml:space="preserve">
     <value>Failed to return to parent folder from location {0}.</value>
   </data>
+  <data name="CopyMove_Info_PartialDescription" xml:space="preserve">
+    <value>Copied files: {0} ({1}). Elapsed: {2}{3}</value>
+  </data>
   <data name="CopyMove_Info_TotalDescription" xml:space="preserve">
     <value>Copied files: {0} / {1} ({2} / {3}). Elapsed: {4}, left: {5}{6}</value>
   </data>
@@ -131,6 +134,9 @@
   </data>
   <data name="CopyMove_Question_CannotGetTargetFileAttributes" xml:space="preserve">
     <value>Cannot get attributes of file {2} in location {1}.</value>
+  </data>
+  <data name="CopyMove_Question_CannotListSourceFolder" xml:space="preserve">
+    <value>Cannot list source folder contents: {0}</value>
   </data>
   <data name="CopyMove_Question_CannotOpenDestinationFile" xml:space="preserve">
     <value>Cannot open destination file {2} in location {0}.</value>
