--- a/File.Manager/File.Manager.Resources/Windows/MainWindow/Strings.resx
+++ b/File.Manager/File.Manager.Resources/Windows/MainWindow/Strings.resx
@@ -117,6 +117,30 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Ribbon_Button_Copy" xml:space="preserve">
+    <value>Copy F5</value>
+  </data>
+  <data name="Ribbon_Button_Delete" xml:space="preserve">
+    <value>Delete F8</value>
+  </data>
+  <data name="Ribbon_Button_Edit" xml:space="preserve">
+    <value>Edit F4</value>
+  </data>
+  <data name="Ribbon_Button_Move" xml:space="preserve">
+    <value>Move F6</value>
+  </data>
+  <data name="Ribbon_Button_NewFolder" xml:space="preserve">
+    <value>New&#x00a0;Folder F7</value>
+  </data>
+  <data name="Ribbon_Button_View" xml:space="preserve">
+    <value>View F3</value>
+  </data>
+  <data name="Ribbon_Group_Actions" xml:space="preserve">
+    <value>Actions</value>
+  </data>
+  <data name="Ribbon_Tab_Home" xml:space="preserve">
+    <value>Home</value>
+  </data>
   <data name="Window_Title" xml:space="preserve">
     <value>File.Manager</value>
   </data>
