Copying and moving in progress

--- a/File.Manager/File.Manager.Resources/Operations/Strings.resx
+++ b/File.Manager/File.Manager.Resources/Operations/Strings.resx
@@ -174,6 +174,9 @@
   <data name="CopyMove_Question_FailedToRemoveSourceFile" xml:space="preserve">
     <value>Failed to delete source file {0} from location {1}.</value>
   </data>
+  <data name="CopyMove_Question_InvalidRenamedFilename" xml:space="preserve">
+    <value>Renamed file name {2} is invalid.</value>
+  </data>
   <data name="CopyMove_Question_SourceFileDoesNotExist" xml:space="preserve">
     <value>Source file {2} does not exist in location {0}.</value>
   </data>
