--- a/File.Manager/File.Manager.Resources/Operations/Strings.resx
+++ b/File.Manager/File.Manager.Resources/Operations/Strings.resx
@@ -174,6 +174,12 @@
   <data name="CopyMove_Question_FailedToRemoveSourceFile" xml:space="preserve">
     <value>Failed to delete source file {0} from location {1}.</value>
   </data>
+  <data name="CopyMove_Question_FileCopiedIntoItself" xml:space="preserve">
+    <value>You try to copy or move a file into itself.</value>
+  </data>
+  <data name="CopyMove_Question_FolderCopiedIntoItself" xml:space="preserve">
+    <value>You try to copy or move a folder into itself.</value>
+  </data>
   <data name="CopyMove_Question_InvalidRenamedFilename" xml:space="preserve">
     <value>Renamed file name {2} is invalid.</value>
   </data>
@@ -185,8 +191,5 @@
   </data>
   <data name="CopyMove_Title_MovingFiles" xml:space="preserve">
     <value>Moving files</value>
-  </data>
-  <data name="CopyMove_Warning_CannotCopyItemsToTheSameLocation" xml:space="preserve">
-    <value>You can't copy items to the same location!</value>
   </data>
 </root>
