--- a/File.Manager/File.Manager.Resources/Enums/Strings.resx
+++ b/File.Manager/File.Manager.Resources/Enums/Strings.resx
@@ -117,52 +117,76 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="GenericProblemResolution_Abort" xml:space="preserve">
+  <data name="GenericCopyMoveProblemResolution_Abort" xml:space="preserve">
     <value>Abort</value>
   </data>
-  <data name="GenericProblemResolution_Ask" xml:space="preserve">
+  <data name="GenericCopyMoveProblemResolution_Ask" xml:space="preserve">
     <value>Ask for decision</value>
   </data>
-  <data name="GenericProblemResolution_Ignore" xml:space="preserve">
+  <data name="GenericCopyMoveProblemResolution_Ignore" xml:space="preserve">
     <value>Ignore</value>
   </data>
-  <data name="GenericProblemResolution_IgnoreAll" xml:space="preserve">
-    <value>Ignore all</value>
-  </data>
-  <data name="GenericProblemResolution_Overwrite" xml:space="preserve">
+  <data name="GenericCopyMoveProblemResolution_Overwrite" xml:space="preserve">
     <value>Overwrite without asking</value>
   </data>
-  <data name="GenericProblemResolution_Rename" xml:space="preserve">
+  <data name="GenericCopyMoveProblemResolution_Rename" xml:space="preserve">
     <value>Rename copied file</value>
   </data>
-  <data name="GenericProblemResolution_Skip" xml:space="preserve">
+  <data name="GenericCopyMoveProblemResolution_Skip" xml:space="preserve">
     <value>Skip</value>
   </data>
-  <data name="SingleProblemResolution_Abort" xml:space="preserve">
+  <data name="GenericDeleteProblemResolution_Abort" xml:space="preserve">
     <value>Abort</value>
   </data>
-  <data name="SingleProblemResolution_Ignore" xml:space="preserve">
-    <value>Ignore</value>
+  <data name="GenericDeleteProblemResolution_Ask" xml:space="preserve">
+    <value>Ask</value>
   </data>
-  <data name="SingleProblemResolution_IgnoreAll" xml:space="preserve">
-    <value>Ignore all</value>
+  <data name="GenericDeleteProblemResolution_Delete" xml:space="preserve">
+    <value>Delete</value>
   </data>
-  <data name="SingleProblemResolution_Overwrite" xml:space="preserve">
-    <value>Overwrite</value>
-  </data>
-  <data name="SingleProblemResolution_OverwriteAll" xml:space="preserve">
-    <value>Overwrite all</value>
-  </data>
-  <data name="SingleProblemResolution_Rename" xml:space="preserve">
-    <value>Rename</value>
-  </data>
-  <data name="SingleProblemResolution_RenameAll" xml:space="preserve">
-    <value>Rename all</value>
-  </data>
-  <data name="SingleProblemResolution_Skip" xml:space="preserve">
+  <data name="GenericDeleteProblemResolution_Skip" xml:space="preserve">
     <value>Skip</value>
   </data>
-  <data name="SingleProblemResolution_SkipAll" xml:space="preserve">
+  <data name="SingleCopyMoveProblemResolution_Abort" xml:space="preserve">
+    <value>Abort</value>
+  </data>
+  <data name="SingleCopyMoveProblemResolution_Ignore" xml:space="preserve">
+    <value>Ignore</value>
+  </data>
+  <data name="SingleCopyMoveProblemResolution_IgnoreAll" xml:space="preserve">
+    <value>Ignore all</value>
+  </data>
+  <data name="SingleCopyMoveProblemResolution_Overwrite" xml:space="preserve">
+    <value>Overwrite</value>
+  </data>
+  <data name="SingleCopyMoveProblemResolution_OverwriteAll" xml:space="preserve">
+    <value>Overwrite all</value>
+  </data>
+  <data name="SingleCopyMoveProblemResolution_Rename" xml:space="preserve">
+    <value>Rename</value>
+  </data>
+  <data name="SingleCopyMoveProblemResolution_RenameAll" xml:space="preserve">
+    <value>Rename all</value>
+  </data>
+  <data name="SingleCopyMoveProblemResolution_Skip" xml:space="preserve">
+    <value>Skip</value>
+  </data>
+  <data name="SingleCopyMoveProblemResolution_SkipAll" xml:space="preserve">
+    <value>Skip all</value>
+  </data>
+  <data name="SingleDeleteProblemResolution_Abort" xml:space="preserve">
+    <value>Abort</value>
+  </data>
+  <data name="SingleDeleteProblemResolution_Delete" xml:space="preserve">
+    <value>Delete</value>
+  </data>
+  <data name="SingleDeleteProblemResolution_DeleteAll" xml:space="preserve">
+    <value>Delete all</value>
+  </data>
+  <data name="SingleDeleteProblemResolution_Skip" xml:space="preserve">
+    <value>Skip</value>
+  </data>
+  <data name="SingleDeleteProblemResolution_SkipAll" xml:space="preserve">
     <value>Skip all</value>
   </data>
 </root>
