--- a/File.Manager/File.Manager.Resources/Windows/DeleteConfigurationWindow/Strings.resx
+++ b/File.Manager/File.Manager.Resources/Windows/DeleteConfigurationWindow/Strings.resx
@@ -117,118 +117,28 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="CopyMove_Info_PartialDescription" xml:space="preserve">
-    <value>Copied files: {0} ({1}). Elapsed: {2}{3}</value>
+  <data name="AddressHeader" xml:space="preserve">
+    <value>Address</value>
   </data>
-  <data name="CopyMove_Info_TotalDescription" xml:space="preserve">
-    <value>Copied files: {0} / {1} ({2} / {3}). Elapsed: {4}, left: {5}{6}</value>
+  <data name="Groupbox_Configuration_Title" xml:space="preserve">
+    <value>Configuration</value>
   </data>
-  <data name="CopyMove_Question_CannotChangeFileAttributes" xml:space="preserve">
-    <value>Cannot change attributes of the destination file {2}.</value>
+  <data name="Groupbox_Summary_Title" xml:space="preserve">
+    <value>Summary</value>
   </data>
-  <data name="CopyMove_Question_CannotCheckIfSubfolderIsEmpty" xml:space="preserve">
-    <value>Cannot check if subfolder {2} in location {0} is empty.</value>
+  <data name="Label_Address" xml:space="preserve">
+    <value>Location</value>
   </data>
-  <data name="CopyMove_Question_CannotCopyFile" xml:space="preserve">
-    <value>Cannot copy file {0} from {1} to {2}.</value>
+  <data name="Label_FileMask" xml:space="preserve">
+    <value>Filter files by mask</value>
   </data>
-  <data name="CopyMove_Question_CannotCreateDestinationFolder" xml:space="preserve">
-    <value>Cannot create folder {2} in location {1}.</value>
+  <data name="Label_SummaryHeader" xml:space="preserve">
+    <value>Delete</value>
   </data>
-  <data name="CopyMove_Question_CannotDeleteEmptyFolder" xml:space="preserve">
-    <value>Cannot delete folder {2} in location {0}.</value>
+  <data name="SummaryHeader_Delete" xml:space="preserve">
+    <value>{0:plural(en):Item|Items} to delete</value>
   </data>
-  <data name="CopyMove_Question_CannotEnterDestinationFolder" xml:space="preserve">
-    <value>Cannot open folder {2} in location {1}.</value>
-  </data>
-  <data name="CopyMove_Question_CannotEnterSourceFolder" xml:space="preserve">
-    <value>Cannot open folde {2} in location {0}.</value>
-  </data>
-  <data name="CopyMove_Question_CannotGetSourceFileAttributes" xml:space="preserve">
-    <value>Cannot get attributes of file {2} in location {0}.</value>
-  </data>
-  <data name="CopyMove_Question_CannotGetTargetFileAttributes" xml:space="preserve">
-    <value>Cannot get attributes of file {2} in location {1}.</value>
-  </data>
-  <data name="CopyMove_Question_CannotListSourceFolder" xml:space="preserve">
-    <value>Cannot list source folder contents: {0}</value>
-  </data>
-  <data name="CopyMove_Question_CannotOpenDestinationFile" xml:space="preserve">
-    <value>Cannot open destination file {2} in location {0}.</value>
-  </data>
-  <data name="CopyMove_Question_CannotOpenSourceFile" xml:space="preserve">
-    <value>Cannot open source file {2} in location {0}.</value>
-  </data>
-  <data name="CopyMove_Question_CannotRemoveSourceFile" xml:space="preserve">
-    <value>Cannot delete source file {0} from location {1}.</value>
-  </data>
-  <data name="CopyMove_Question_CannotSetTargetFileAttributes" xml:space="preserve">
-    <value>Cannot set attributes for file {2} in location {1}.</value>
-  </data>
-  <data name="CopyMove_Question_DestinationFileAlreadyExists" xml:space="preserve">
-    <value>Destination file {2} already exists in location {1}.</value>
-  </data>
-  <data name="CopyMove_Question_DestinationFileIsReadOnly" xml:space="preserve">
-    <value>Destination file {2} is read only.</value>
-  </data>
-  <data name="CopyMove_Question_DestinationFileIsSystem" xml:space="preserve">
-    <value>Destination file {2} is a system file.</value>
-  </data>
-  <data name="CopyMove_Question_FileCopiedIntoItself" xml:space="preserve">
-    <value>You try to copy or move a file into itself.</value>
-  </data>
-  <data name="CopyMove_Question_FolderCopiedIntoItself" xml:space="preserve">
-    <value>You try to copy or move a folder into itself.</value>
-  </data>
-  <data name="CopyMove_Question_InvalidRenamedFilename" xml:space="preserve">
-    <value>Renamed file name {2} is invalid.</value>
-  </data>
-  <data name="CopyMove_Question_SourceFileDoesNotExist" xml:space="preserve">
-    <value>Source file {2} does not exist in location {0}.</value>
-  </data>
-  <data name="CopyMove_Title_CopyingFiles" xml:space="preserve">
-    <value>Copying files</value>
-  </data>
-  <data name="CopyMove_Title_MovingFiles" xml:space="preserve">
-    <value>Moving files</value>
-  </data>
-  <data name="Delete_Info_PartialDescription" xml:space="preserve">
-    <value>Deleted files: {0} ({1}). Elapsed: {2}</value>
-  </data>
-  <data name="Delete_Info_TotalDescription" xml:space="preserve">
-    <value>Deleted files: {0} / {1} ({2} / {3}). Elapsed: {4}, left: {5}{6}</value>
-  </data>
-  <data name="Delete_Question_CannotCheckIfSubfolderIsEmpty" xml:space="preserve">
-    <value>Cannot check if subfolder {1} in location {0} is empty.</value>
-  </data>
-  <data name="Delete_Question_CannotDeleteFile" xml:space="preserve">
-    <value>Cannot delete file {1} in location {0}.</value>
-  </data>
-  <data name="Delete_Question_CannotDeleteFolder" xml:space="preserve">
-    <value>Cannot delete folder {1} in location {0}.</value>
-  </data>
-  <data name="Delete_Question_CannotEnterFolder" xml:space="preserve">
-    <value>Cannot open folder {1} in location {0}.</value>
-  </data>
-  <data name="Delete_Question_CannotGetFileAttributes" xml:space="preserve">
-    <value>Cannot get attributes of file {1} in location {0}.</value>
-  </data>
-  <data name="Delete_Question_CannotListFolderContents" xml:space="preserve">
-    <value>Cannot list folder contents: {0}</value>
-  </data>
-  <data name="Delete_Question_CannotSetFileAttributes" xml:space="preserve">
-    <value>Cannot set attributes of file {1} in location {0}.</value>
-  </data>
-  <data name="Delete_Question_DeletedFileIsHidden" xml:space="preserve">
-    <value>File {1} in location {0} is hidden.</value>
-  </data>
-  <data name="Delete_Question_DeletedFileIsReadOnly" xml:space="preserve">
-    <value>File {1} in location {0} is read only.</value>
-  </data>
-  <data name="Delete_Question_DeletedFileIsSystem" xml:space="preserve">
-    <value>File {1} in location {0} is system.</value>
-  </data>
-  <data name="Delete_Question_FileDoesNotExist" xml:space="preserve">
-    <value>File {1} is no longer in location {0}.</value>
+  <data name="SummaryValue_Plural" xml:space="preserve">
+    <value>Selected {0:plural(en):Item|Items} to delete</value>
   </data>
 </root>
