--- a/File.Manager/File.Manager.Resources/Windows/MainWindow/Strings.resx
+++ b/File.Manager/File.Manager.Resources/Windows/MainWindow/Strings.resx
@@ -117,6 +117,21 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Error_CannotCheckIfFileExists" xml:space="preserve">
+    <value>Cannot check if file {0} exists in the current location!</value>
+  </data>
+  <data name="Error_CannotCheckIfFolderExists" xml:space="preserve">
+    <value>Cannot check if folder {0} exists in the current location!</value>
+  </data>
+  <data name="Error_CannotCreateFolder" xml:space="preserve">
+    <value>Cannot create folder {0} in the current location!</value>
+  </data>
+  <data name="Error_FileAlreadyExists" xml:space="preserve">
+    <value>File {0} already exists in the current location!</value>
+  </data>
+  <data name="Error_FolderAlreadyExists" xml:space="preserve">
+    <value>Folder {0} already exists in the current location!</value>
+  </data>
   <data name="Ribbon_Button_Copy" xml:space="preserve">
     <value>Copy F5</value>
   </data>
@@ -130,7 +145,7 @@
     <value>Move F6</value>
   </data>
   <data name="Ribbon_Button_NewFolder" xml:space="preserve">
-    <value>New&#x00a0;Folder F7</value>
+    <value>New Folder F7</value>
   </data>
   <data name="Ribbon_Button_View" xml:space="preserve">
     <value>View F3</value>
