--- a/File.Manager/File.Manager.Resources/Windows/DeleteConfigurationWindow/Strings.resx
+++ b/File.Manager/File.Manager.Resources/Windows/DeleteConfigurationWindow/Strings.resx
@@ -139,6 +139,9 @@
     <value>{0:plural(en):Item|Items} to delete</value>
   </data>
   <data name="SummaryValue_Plural" xml:space="preserve">
-    <value>Selected {0:plural(en):Item|Items} to delete</value>
+    <value>Selected {0:plural(en):{} item|{} items} to delete</value>
+  </data>
+  <data name="Title" xml:space="preserve">
+    <value>Delete files</value>
   </data>
 </root>
