--- a/File.Manager/File.Manager.Resources/Operations/Strings.resx
+++ b/File.Manager/File.Manager.Resources/Operations/Strings.resx
@@ -124,70 +124,70 @@
     <value>Copied files: {0} / {1} ({2} / {3}). Elapsed: {4}, left: {5}{6}</value>
   </data>
   <data name="CopyMove_Question_CannotChangeFileAttributes" xml:space="preserve">
-    <value>Cannot change attributes of the destination file {2}.</value>
+    <value>Cannot change attributes of the destination file "{2}".</value>
   </data>
   <data name="CopyMove_Question_CannotCheckIfDestinationFileExists" xml:space="preserve">
-    <value>Cannot check if file {2} exists in location {1}.</value>
+    <value>Cannot check if file "{2}" exists in location "{1}".</value>
   </data>
   <data name="CopyMove_Question_CannotCheckIfDestinationFolderExists" xml:space="preserve">
-    <value>Cannot check if folder {2} exists in location {1}.</value>
+    <value>Cannot check if folder "{2}" exists in location "{1}".</value>
   </data>
   <data name="CopyMove_Question_CannotCheckIfSourceFileExists" xml:space="preserve">
-    <value>Cannot check if file {2} exists in location {0}.</value>
+    <value>Cannot check if file "{2}" exists in location "{0}".</value>
   </data>
   <data name="CopyMove_Question_CannotCheckIfSourceFolderExists" xml:space="preserve">
-    <value>Cannot check if folder {2} exists in location {0}.</value>
+    <value>Cannot check if folder "{2}" exists in location "{0}".</value>
   </data>
   <data name="CopyMove_Question_CannotCheckIfSubfolderIsEmpty" xml:space="preserve">
-    <value>Cannot check if subfolder {2} in location {0} is empty.</value>
+    <value>Cannot check if subfolder "{2}" in location "{0}" is empty.</value>
   </data>
   <data name="CopyMove_Question_CannotCopyFile" xml:space="preserve">
-    <value>Cannot copy file {0} from {1} to {2}.</value>
+    <value>Cannot copy file "{0}" from "{1}" to "{2}".</value>
   </data>
   <data name="CopyMove_Question_CannotCreateDestinationFolder" xml:space="preserve">
-    <value>Cannot create folder {2} in location {1}.</value>
+    <value>Cannot create folder "{2}" in location "{1}".</value>
   </data>
   <data name="CopyMove_Question_CannotDeleteEmptyFolder" xml:space="preserve">
-    <value>Cannot delete folder {2} in location {0}.</value>
+    <value>Cannot delete folder "{2}" in location "{0}".</value>
   </data>
   <data name="CopyMove_Question_CannotEnterDestinationFolder" xml:space="preserve">
-    <value>Cannot open folder {2} in location {1}.</value>
+    <value>Cannot open folder "{2}" in location "{1}".</value>
   </data>
   <data name="CopyMove_Question_CannotEnterSourceFolder" xml:space="preserve">
-    <value>Cannot open folde {2} in location {0}.</value>
+    <value>Cannot open folde "{2}" in location "{0}".</value>
   </data>
   <data name="CopyMove_Question_CannotGetSourceFileAttributes" xml:space="preserve">
-    <value>Cannot get attributes of file {2} in location {0}.</value>
+    <value>Cannot get attributes of file "{2}" in location "{0}".</value>
   </data>
   <data name="CopyMove_Question_CannotGetTargetFileAttributes" xml:space="preserve">
-    <value>Cannot get attributes of file {2} in location {1}.</value>
+    <value>Cannot get attributes of file "{2}" in location "{1}".</value>
   </data>
   <data name="CopyMove_Question_CannotListSourceFolder" xml:space="preserve">
-    <value>Cannot list source folder contents: {0}</value>
+    <value>Cannot list source folder contents: "{0}"</value>
   </data>
   <data name="CopyMove_Question_CannotOpenDestinationFile" xml:space="preserve">
-    <value>Cannot open destination file {2} in location {0}.</value>
+    <value>Cannot open destination file "{2}" in location "{0}".</value>
   </data>
   <data name="CopyMove_Question_CannotOpenSourceFile" xml:space="preserve">
-    <value>Cannot open source file {2} in location {0}.</value>
+    <value>Cannot open source file "{2}" in location "{0}".</value>
   </data>
   <data name="CopyMove_Question_CannotRemoveSourceFile" xml:space="preserve">
-    <value>Cannot delete source file {0} from location {1}.</value>
+    <value>Cannot delete source file "{0}" from location "{1}".</value>
   </data>
   <data name="CopyMove_Question_CannotSetTargetFileAttributes" xml:space="preserve">
-    <value>Cannot set attributes for file {2} in location {1}.</value>
+    <value>Cannot set attributes for file "{2}" in location "{1}".</value>
   </data>
   <data name="CopyMove_Question_DestinationFileAlreadyExists" xml:space="preserve">
-    <value>Destination file {2} already exists in location {1}.</value>
+    <value>Destination file "{2}" already exists in location "{1}".</value>
   </data>
   <data name="CopyMove_Question_DestinationFileIsReadOnly" xml:space="preserve">
-    <value>Destination file {2} is read only.</value>
+    <value>Destination file "{2}" is read only.</value>
   </data>
   <data name="CopyMove_Question_DestinationFileIsSystem" xml:space="preserve">
-    <value>Destination file {2} is a system file.</value>
+    <value>Destination file "{2}" is a system file.</value>
   </data>
   <data name="CopyMove_Question_DestinationFolderAlreadyExists" xml:space="preserve">
-    <value>Cannot copy file {0}: location {1} already contains folder with the same name.</value>
+    <value>Cannot copy file "{0}": location "{1}" already contains folder with the same name.</value>
   </data>
   <data name="CopyMove_Question_FileCopiedIntoItself" xml:space="preserve">
     <value>You try to copy or move a file into itself.</value>
@@ -196,10 +196,10 @@
     <value>You try to copy or move a folder into itself.</value>
   </data>
   <data name="CopyMove_Question_InvalidRenamedFilename" xml:space="preserve">
-    <value>Renamed file name {2} is invalid.</value>
+    <value>Renamed file name "{2}" is invalid.</value>
   </data>
   <data name="CopyMove_Question_SourceFileDoesNotExist" xml:space="preserve">
-    <value>Source file {2} does not exist in location {0}.</value>
+    <value>Source file "{2}" does not exist in location "{0}".</value>
   </data>
   <data name="CopyMove_Title_CopyingFiles" xml:space="preserve">
     <value>Copying files</value>
@@ -214,39 +214,39 @@
     <value>Deleted files: {0} / {1} ({2} / {3}). Elapsed: {4}, left: {5}{6}</value>
   </data>
   <data name="Delete_Question_CannotCheckIfFileExists" xml:space="preserve">
-    <value>Cannot check if file {1} exists in location {0}.</value>
+    <value>Cannot check if file "{1}" exists in location "{0}".</value>
   </data>
   <data name="Delete_Question_CannotCheckIfSubfolderIsEmpty" xml:space="preserve">
-    <value>Cannot check if subfolder {1} in location {0} is empty.</value>
+    <value>Cannot check if subfolder "{1}" in location "{0}" is empty.</value>
   </data>
   <data name="Delete_Question_CannotDeleteFile" xml:space="preserve">
-    <value>Cannot delete file {1} in location {0}.</value>
+    <value>Cannot delete file "{1}" in location "{0}".</value>
   </data>
   <data name="Delete_Question_CannotDeleteFolder" xml:space="preserve">
-    <value>Cannot delete folder {1} in location {0}.</value>
+    <value>Cannot delete folder "{1}" in location "{0}".</value>
   </data>
   <data name="Delete_Question_CannotEnterFolder" xml:space="preserve">
-    <value>Cannot open folder {1} in location {0}.</value>
+    <value>Cannot open folder "{1}" in location "{0}".</value>
   </data>
   <data name="Delete_Question_CannotGetFileAttributes" xml:space="preserve">
-    <value>Cannot get attributes of file {1} in location {0}.</value>
+    <value>Cannot get attributes of file "{1}" in location "{0}".</value>
   </data>
   <data name="Delete_Question_CannotListFolderContents" xml:space="preserve">
-    <value>Cannot list folder contents: {0}</value>
+    <value>Cannot list folder contents: "{0}"</value>
   </data>
   <data name="Delete_Question_CannotSetFileAttributes" xml:space="preserve">
-    <value>Cannot set attributes of file {1} in location {0}.</value>
+    <value>Cannot set attributes of file "{1}" in location "{0}".</value>
   </data>
   <data name="Delete_Question_DeletedFileIsHidden" xml:space="preserve">
-    <value>File {1} in location {0} is hidden.</value>
+    <value>File "{1}" in location "{0}" is hidden.</value>
   </data>
   <data name="Delete_Question_DeletedFileIsReadOnly" xml:space="preserve">
-    <value>File {1} in location {0} is read only.</value>
+    <value>File "{1}" in location "{0}" is read only.</value>
   </data>
   <data name="Delete_Question_DeletedFileIsSystem" xml:space="preserve">
-    <value>File {1} in location {0} is system.</value>
+    <value>File "{1}" in location "{0}" is system.</value>
   </data>
   <data name="Delete_Question_FileDoesNotExist" xml:space="preserve">
-    <value>File {1} is no longer in location {0}.</value>
+    <value>File "{1}" is no longer in location "{0}".</value>
   </data>
 </root>
