--- a/File.Manager/File.Manager.Resources/Windows/UserDecision/Strings.resx
+++ b/File.Manager/File.Manager.Resources/Windows/UserDecision/Strings.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Label_Header" xml:space="preserve">
+    <value>Problem encountered</value>
+  </data>
   <data name="Title" xml:space="preserve">
     <value>Choose problem resolution</value>
   </data>
