--- a/File.Manager/File.Manager.Resources/Windows/DeleteProgressWindow/Strings.resx
+++ b/File.Manager/File.Manager.Resources/Windows/DeleteProgressWindow/Strings.resx
@@ -129,4 +129,7 @@
   <data name="Question_CancelOperationInProgress" xml:space="preserve">
     <value>Do you want to cancel the operation?</value>
   </data>
+  <data name="Title" xml:space="preserve">
+    <value>Deleting...</value>
+  </data>
 </root>
