First complete FTP implementation

--- a/File.Manager/File.Manager.Resources/Windows/FtpCredentialsWindow/Strings.resx
+++ b/File.Manager/File.Manager.Resources/Windows/FtpCredentialsWindow/Strings.resx
@@ -117,31 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Error_FailedToNavigateToDirectory" xml:space="preserve">
-    <value>Failed to navigate to directory {0}. Error: {1}</value>
+  <data name="Groupbox_Credentials" xml:space="preserve">
+    <value>Credentials</value>
   </data>
-  <data name="Error_FailedToOpenFtpSession" xml:space="preserve">
-    <value>Failed to open FTP session. Error: {0}</value>
+  <data name="Label_Password" xml:space="preserve">
+    <value>Password</value>
   </data>
-  <data name="FtpDisplayName" xml:space="preserve">
-    <value>Ftp</value>
+  <data name="Label_Username" xml:space="preserve">
+    <value>User name</value>
   </data>
-  <data name="Information_SessionAlreadyExists" xml:space="preserve">
-    <value>Session is already opened.</value>
-  </data>
-  <data name="Name_NewSession" xml:space="preserve">
-    <value>Add session...</value>
-  </data>
-  <data name="Reason_FailedToConnect" xml:space="preserve">
-    <value>Falied to connect to host.</value>
-  </data>
-  <data name="SizeDisplay_Directory" xml:space="preserve">
-    <value>[SUB-DIR]</value>
-  </data>
-  <data name="SizeDisplay_Session" xml:space="preserve">
-    <value>[SESSION]</value>
-  </data>
-  <data name="SizeDisplay_UpDirectory" xml:space="preserve">
-    <value>[UP-DIR]</value>
+  <data name="Title" xml:space="preserve">
+    <value>Enter credentials</value>
   </data>
 </root>
