--- a/File.Manager/File.Manager.Resources/Controls/Pane/Strings.resx
+++ b/File.Manager/File.Manager.Resources/Controls/Pane/Strings.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Label_QuickSearch" xml:space="preserve">
+    <value>Quick search</value>
+  </data>
   <data name="Message_AddressNavigationFailed" xml:space="preserve">
     <value>Falied to navigate to address {0}: {1}</value>
   </data>
